# facademy-dl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: clean_page.py  crawler.py  downloader.py  main.py  make_page_local.py  misc.py  page_loader.py  page_parser.py
