[tool.poetry]
name = "fluency_academy_downloader"
version = "0.1.0"
description = ""
authors = ["Giovanni Martinelli <giofmartinelli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
helium = "^3.0.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
ffmpeg = "^1.4"
m3u8-To-MP4 = "^0.1.11"
tqdm = "^4.64.0"
aiohttp = "^3.8.1"
aiofile = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
mypy = "^0.971"
isort = "^5.10.1"
black = {version = "^22.6.0", allow-prereleases = true}
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
